[tool.poetry]
name = "prenuvo-pii"
version = "0.1.0"
description = "User PII repo"
authors = ["Craig Holland <craig_holland@hotmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [
    { include = "pii" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^3.0.0"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
protobuf = "^4.25.0"
kafka-python = "^2.0.2"
pydantic = "^2.5.2"
python-dotenv = "^1.0.0"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.6"
ijson = "^3.2.0"
"sqla-wrapper" = "^6.0.0"
alembic-utils = "^0.8.8"
sqlalchemy = "^2.0.41"
tqdm = "^4.67.1"
testcontainers = {extras = ["postgresql"], version = "^4.10.0"}
arrow = "^1.3.0"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.1"
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
start = "pii.services.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
